// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture basic-turn reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "agentNote": "",
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "capabilitySource": "read",
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "createdAt": "1970-01-01T00:16:40.000Z",
  "cwd": "/Users/jesse/prime-radiant/toil-suite/evener",
  "delegates": [],
  "failedToolCalls": undefined,
  "gitBranch": undefined,
  "goal": null,
  "history": {
    "appliedGeneration": 1,
    "bootGeneration": "1",
    "deferredPages": [],
    "epoch": 0,
    "incarnation": "inc_a",
    "issuedGeneration": 1,
    "length": 2,
    "turns": [
      {
        "completedAt": "1970-01-01T00:00:12.000Z",
        "cost": undefined,
        "durationMs": 11000,
        "error": undefined,
        "id": "turn_1000",
        "items": [
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": undefined,
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_1000:0:0",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 1,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "source": undefined,
            "startedAt": undefined,
            "status": "completed",
            "steeringKind": undefined,
            "text": "What files handle auth?",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_1000:0:0",
            "turnId": "turn_1000",
            "type": "userMessage",
            "version": 1,
          },
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": undefined,
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_1000:1:0",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 2,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "source": undefined,
            "startedAt": undefined,
            "status": "completed",
            "steeringKind": undefined,
            "text": "auth/auth.go and identifier/ handle authentication.",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_1000:1:0",
            "turnId": "turn_1000",
            "type": "agentMessage",
            "version": 2,
          },
        ],
        "startedAt": "1970-01-01T00:00:01.000Z",
        "status": "completed",
        "usage": undefined,
        "version": 2,
      },
      {
        "completedAt": "1970-01-01T00:00:21.000Z",
        "cost": undefined,
        "durationMs": 1000,
        "error": undefined,
        "id": "turn_1001",
        "items": [
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": "1970-01-01T00:00:21.000Z",
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_1001:2:0",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 3,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "roundId": "r1",
            "source": undefined,
            "startedAt": "1970-01-01T00:00:20.100Z",
            "status": "completed",
            "steeringKind": undefined,
            "text": "Hello, world!",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_1001:2:0",
            "turnId": "turn_1001",
            "type": "agentMessage",
            "version": 3,
          },
        ],
        "startedAt": "1970-01-01T00:00:20.000Z",
        "status": "completed",
        "usage": undefined,
        "version": 3,
      },
    ],
  },
  "humanNote": "",
  "imageSessionId": "sess_1001",
  "jobsTreeRevision": null,
  "jobsUpdatedAt": null,
  "lastFrameAt": 1005,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "Auth files",
  "olderCursor": undefined,
  "overlay": {},
  "pendingEscalations": [],
  "pendingMutations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_1001",
  "resumeRequired": false,
  "sessionUrls": [],
  "skills": [],
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_1001",
  "turnSlots": null,
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:12.000Z",
      "cost": undefined,
      "durationMs": 11000,
      "error": undefined,
      "id": "turn_1000",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_1000:0:0",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 1,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "steeringKind": undefined,
          "text": "What files handle auth?",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_1000:0:0",
          "turnId": "turn_1000",
          "type": "userMessage",
          "version": 1,
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_1000:1:0",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 2,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "steeringKind": undefined,
          "text": "auth/auth.go and identifier/ handle authentication.",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_1000:1:0",
          "turnId": "turn_1000",
          "type": "agentMessage",
          "version": 2,
        },
      ],
      "startedAt": "1970-01-01T00:00:01.000Z",
      "status": "completed",
      "usage": undefined,
      "version": 2,
    },
    {
      "completedAt": "1970-01-01T00:00:21.000Z",
      "cost": undefined,
      "durationMs": 1000,
      "error": undefined,
      "id": "turn_1001",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:21.000Z",
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_1001:2:0",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 3,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "roundId": "r1",
          "source": undefined,
          "startedAt": "1970-01-01T00:00:20.100Z",
          "status": "completed",
          "steeringKind": undefined,
          "text": "Hello, world!",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_1001:2:0",
          "turnId": "turn_1001",
          "type": "agentMessage",
          "version": 3,
        },
      ],
      "startedAt": "1970-01-01T00:00:20.000Z",
      "status": "completed",
      "usage": undefined,
      "version": 3,
    },
  ],
  "updatedAt": "1970-01-01T03:20:00.000Z",
  "usage": null,
  "visionModel": "",
  "workMillis": 0,
}
`;

exports[`fixture queue-and-status reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "agentNote": "",
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "capabilitySource": "read",
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "createdAt": "1970-01-01T00:16:40.000Z",
  "cwd": "/Users/jesse/prime-radiant/toil-suite/evener",
  "delegates": [],
  "failedToolCalls": undefined,
  "gitBranch": undefined,
  "goal": null,
  "humanNote": "",
  "imageSessionId": "sess_4001",
  "jobsTreeRevision": null,
  "jobsUpdatedAt": null,
  "lastFrameAt": 1004,
  "model": "claude-opus-4-1",
  "modelProvider": "anthropic",
  "name": "Refactor plan v2",
  "olderCursor": undefined,
  "pendingEscalations": [],
  "pendingMutations": [],
  "projectPath": undefined,
  "queue": {
    "depth": 2,
    "ids": [
      "q1",
      "q2",
    ],
    "preview": [
      "Fix the lint errors",
      "Update the README",
    ],
    "texts": [
      "Fix the lint errors in server/",
      "Update the README with the new setup steps",
    ],
  },
  "reasoningEffort": "medium",
  "reasoningEffortLevels": [
    "low",
    "medium",
    "high",
  ],
  "ref": "ref_4001",
  "resumeRequired": false,
  "sessionUrls": [],
  "skills": [],
  "status": {
    "type": "active",
  },
  "supportsReasoning": true,
  "tasks": {
    "done": 2,
    "total": 5,
  },
  "threadId": "thr_4001",
  "turnSlots": null,
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:09.000Z",
      "cost": undefined,
      "durationMs": 8000,
      "error": undefined,
      "id": "turn_4000",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "item_4000a",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "prevalOnly": undefined,
          "raw": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "steeringKind": undefined,
          "text": "Draft a refactor plan for the queue module.",
          "toolName": undefined,
          "turnId": "turn_4000",
          "type": "userMessage",
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "item_4000b",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "prevalOnly": undefined,
          "raw": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "steeringKind": undefined,
          "text": "Here is a three-step plan.",
          "toolName": undefined,
          "turnId": "turn_4000",
          "type": "agentMessage",
        },
      ],
      "startedAt": "1970-01-01T00:00:01.000Z",
      "status": "completed",
      "usage": undefined,
    },
  ],
  "updatedAt": "1970-01-01T02:30:00.000Z",
  "usage": null,
  "visionModel": "",
  "workMillis": 0,
}
`;

exports[`fixture streaming-with-reset reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "agentNote": "",
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "capabilitySource": "read",
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "createdAt": "1970-01-01T00:16:40.000Z",
  "cwd": "/Users/jesse/prime-radiant/toil-suite/evener",
  "delegates": [],
  "failedToolCalls": undefined,
  "gitBranch": undefined,
  "goal": null,
  "history": {
    "appliedGeneration": 1,
    "bootGeneration": "1",
    "deferredPages": [],
    "epoch": 0,
    "incarnation": "inc_a",
    "issuedGeneration": 1,
    "length": 0,
    "turns": [
      {
        "completedAt": "1970-01-01T00:00:03.200Z",
        "cost": undefined,
        "durationMs": 1200,
        "error": undefined,
        "id": "turn_2001",
        "items": [
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": "1970-01-01T00:00:02.500Z",
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_2001:0:0",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 1,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "reasoningSummaries": [
              [
                "Weighing approach A vs approach B.

Double-checking the math.",
              ],
            ],
            "roundId": "r1",
            "source": undefined,
            "startedAt": "1970-01-01T00:00:02.000Z",
            "status": "completed",
            "steeringKind": undefined,
            "text": "Weighing approach A vs approach B.

Double-checking the math.",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_2001:0:0",
            "turnId": "turn_2001",
            "type": "reasoning",
            "version": 1,
          },
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": "1970-01-01T00:00:03.200Z",
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_2001:0:1",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 1,
              "item": 1,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "roundId": "r1",
            "source": undefined,
            "startedAt": "1970-01-01T00:00:02.600Z",
            "status": "completed",
            "steeringKind": undefined,
            "text": "After double-checking, the answer is 42.",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_2001:0:1",
            "turnId": "turn_2001",
            "type": "agentMessage",
            "version": 1,
          },
        ],
        "startedAt": "1970-01-01T00:00:02.000Z",
        "status": "completed",
        "usage": undefined,
        "version": 1,
      },
    ],
  },
  "humanNote": "",
  "imageSessionId": "sess_2001",
  "jobsTreeRevision": null,
  "jobsUpdatedAt": null,
  "lastFrameAt": 1010,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "",
  "olderCursor": undefined,
  "overlay": {},
  "pendingEscalations": [],
  "pendingMutations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_2001",
  "resumeRequired": false,
  "sessionUrls": [],
  "skills": [],
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_2001",
  "turnSlots": null,
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:03.200Z",
      "cost": undefined,
      "durationMs": 1200,
      "error": undefined,
      "id": "turn_2001",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:02.500Z",
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_2001:0:0",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 1,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "reasoningSummaries": [
            [
              "Weighing approach A vs approach B.

Double-checking the math.",
            ],
          ],
          "roundId": "r1",
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.000Z",
          "status": "completed",
          "steeringKind": undefined,
          "text": "Weighing approach A vs approach B.

Double-checking the math.",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_2001:0:0",
          "turnId": "turn_2001",
          "type": "reasoning",
          "version": 1,
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:03.200Z",
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_2001:0:1",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 1,
            "item": 1,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "roundId": "r1",
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.600Z",
          "status": "completed",
          "steeringKind": undefined,
          "text": "After double-checking, the answer is 42.",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_2001:0:1",
          "turnId": "turn_2001",
          "type": "agentMessage",
          "version": 1,
        },
      ],
      "startedAt": "1970-01-01T00:00:02.000Z",
      "status": "completed",
      "usage": undefined,
      "version": 1,
    },
  ],
  "updatedAt": "1970-01-01T00:16:40.000Z",
  "usage": null,
  "visionModel": "",
  "workMillis": 0,
}
`;

exports[`fixture tool-and-jobs reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "agentNote": "",
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "capabilitySource": "read",
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "createdAt": "1970-01-01T00:16:40.000Z",
  "cwd": "/Users/jesse/prime-radiant/toil-suite/evener",
  "delegates": [],
  "failedToolCalls": undefined,
  "gitBranch": undefined,
  "goal": null,
  "history": {
    "appliedGeneration": 1,
    "bootGeneration": "1",
    "deferredPages": [],
    "epoch": 0,
    "incarnation": "inc_a",
    "issuedGeneration": 1,
    "length": 0,
    "turns": [
      {
        "completedAt": "1970-01-01T00:00:03.000Z",
        "cost": undefined,
        "durationMs": 1000,
        "error": undefined,
        "id": "turn_3001",
        "items": [
          {
            "argumentsJSON": "{"cmd":"go test ./..."}",
            "callId": "call_3001",
            "completedAt": "1970-01-01T00:00:03.000Z",
            "completedAtEntry": 3,
            "description": "Run tests",
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_3001:0:0",
            "images": undefined,
            "output": "ok  	agent/...	0.4s
ok  	hubapi/...	0.2s
PASS
",
            "outputImages": undefined,
            "position": {
              "entry": 1,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "source": undefined,
            "startedAt": "1970-01-01T00:00:02.000Z",
            "status": "completed",
            "steeringKind": undefined,
            "text": "",
            "toolName": "run_tests",
            "transcriptKey": "apptranscript-item-v2:turn_3001:0:0",
            "turnId": "turn_3001",
            "type": "commandExecution",
            "version": 3,
          },
          {
            "argumentsJSON": undefined,
            "callId": undefined,
            "completedAt": undefined,
            "description": undefined,
            "error": undefined,
            "eventKind": undefined,
            "exitCode": undefined,
            "id": "apptranscript-item-v2:turn_3001:1:0",
            "images": undefined,
            "output": undefined,
            "outputImages": undefined,
            "position": {
              "entry": 2,
              "item": 0,
            },
            "prevalOnly": undefined,
            "raw": undefined,
            "source": "user",
            "startedAt": undefined,
            "status": "completed",
            "steeringKind": undefined,
            "text": "Please also check the lint output",
            "toolName": undefined,
            "transcriptKey": "apptranscript-item-v2:turn_3001:1:0",
            "turnId": "turn_3001",
            "type": "steering",
            "version": 2,
          },
        ],
        "startedAt": "1970-01-01T00:00:02.000Z",
        "status": "completed",
        "usage": undefined,
        "version": 3,
      },
    ],
  },
  "humanNote": "",
  "imageSessionId": "sess_3001",
  "jobsTreeRevision": null,
  "jobsUpdatedAt": 1006,
  "lastFrameAt": 1007,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "",
  "olderCursor": undefined,
  "overlay": {},
  "pendingEscalations": [],
  "pendingMutations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_3001",
  "resumeRequired": false,
  "sessionUrls": [],
  "skills": [],
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_3001",
  "turnSlots": null,
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:03.000Z",
      "cost": undefined,
      "durationMs": 1000,
      "error": undefined,
      "id": "turn_3001",
      "items": [
        {
          "argumentsJSON": "{"cmd":"go test ./..."}",
          "callId": "call_3001",
          "completedAt": "1970-01-01T00:00:03.000Z",
          "completedAtEntry": 3,
          "description": "Run tests",
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_3001:0:0",
          "images": undefined,
          "output": "ok  	agent/...	0.4s
ok  	hubapi/...	0.2s
PASS
",
          "outputImages": undefined,
          "position": {
            "entry": 1,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.000Z",
          "status": "completed",
          "steeringKind": undefined,
          "text": "",
          "toolName": "run_tests",
          "transcriptKey": "apptranscript-item-v2:turn_3001:0:0",
          "turnId": "turn_3001",
          "type": "commandExecution",
          "version": 3,
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "description": undefined,
          "error": undefined,
          "eventKind": undefined,
          "exitCode": undefined,
          "id": "apptranscript-item-v2:turn_3001:1:0",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "position": {
            "entry": 2,
            "item": 0,
          },
          "prevalOnly": undefined,
          "raw": undefined,
          "source": "user",
          "startedAt": undefined,
          "status": "completed",
          "steeringKind": undefined,
          "text": "Please also check the lint output",
          "toolName": undefined,
          "transcriptKey": "apptranscript-item-v2:turn_3001:1:0",
          "turnId": "turn_3001",
          "type": "steering",
          "version": 2,
        },
      ],
      "startedAt": "1970-01-01T00:00:02.000Z",
      "status": "completed",
      "usage": undefined,
      "version": 3,
    },
  ],
  "updatedAt": "1970-01-01T00:16:40.000Z",
  "usage": null,
  "visionModel": "",
  "workMillis": 0,
}
`;
